<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/crop"
              tools:context="com.marinkovic.drustvenko.RegisterActivity"
              android:gravity="top">

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/register_firstname_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:iconSignifier="@drawable/firtstnameicon"
        app:labelText="@string/prompt_firstname"
        app:primaryColor="@color/white"
        app:secondaryColor="@color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/register_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/register_lastname"
            android:inputType="textPersonName"
            android:textColor="#FFFF" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/register_lasttname_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:iconSignifier="@drawable/firtstnameicon"
        app:labelText="@string/prompt_lastname"
        app:primaryColor="@color/white"
        app:secondaryColor="@color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/register_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/register_username"
            android:inputType="textPersonName"
            android:textColor="#FFFF"/>

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/register_username_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:iconSignifier="@drawable/usernameicon"
        app:labelText="@string/prompt_username"
        app:primaryColor="@color/white"
        app:secondaryColor="@color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/register_username"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/register_email"
            android:inputType="textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"/>

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/register_email_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:iconSignifier="@drawable/emailicon"
        app:labelText="@string/prompt_email"
        app:primaryColor="@color/white"
        app:secondaryColor="@color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/register_email"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete|textEmailAddress"
            android:textColor="#FFFF"/>

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/register_password_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:iconSignifier="@drawable/passicon"
        app:labelText="@string/prompt_password"
        app:primaryColor="@color/white"
        app:secondaryColor="@color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/register_password"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/register_confirm_password"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"/>

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/register_confirm_password_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:iconSignifier="@drawable/passicon"
        app:labelText="@string/prompt_password_again"
        app:primaryColor="@color/white"
        app:secondaryColor="@color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/register_confirm_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/register_sign_up_button"
            android:textColor="#FFFF"/>

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <Button
            android:id="@+id/register_sign_up_button"
            style="?android:textAppearanceMedium"
            android:background="@color/white"
            android:textColor="@color/black"
            android:onClick="signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up"
            android:textStyle="bold"/>

</LinearLayout>